# Learn-OpenGL

./: .gitmodules  CMakeLists.txt
MightRenderer/: CMakeLists.txt
MightRenderer/configuration/: root_directory.h
MightRenderer/src/: Application.cpp  camera.h  filesystem.h  mesh.h  model.h  shader.h
MightRenderer/src orig/: Application.cpp
